[project]
name = "ytpu"
version = "0.0.1"
description = "YT-DLP Playlist Audio Downloaded"
requires-python = ">=3.12"
dependencies = [
    "pathvalidate==3.3.1",
    "tqdm==4.67.1"
]
authors = [
    {name = "ritonun"},
]
readme = "README.md"
keywords = ["downloader", "video", "media"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
ytpu = "ytpu.main:main"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
